Fixed some list spacing to be smaller

--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ background: linear-gradient(90deg, rgba(25,138,23,1) 23%, rgba(144,232,134,1) 67
 
 #list1 li {
 
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 
 }
 
